--- a/src/components/animation/toast-message/toast-message.module.scss
+++ b/src/components/animation/toast-message/toast-message.module.scss
@@ -1,22 +1,17 @@
 .wrapper {
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 20px;
     height: 50px;
     background-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 909090;
-
     transition: all 0.3s;
+    margin: 20px 0 10px 0;
 }
 
 .toast {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
         'Open Sans', 'Helvetica Neue', sans-serif;
-    width: 200px;
+    width: 100%;
     padding: 12px;
     display: flex;
     flex-direction: row;
@@ -42,16 +37,16 @@
     font-size: 13px;
     color: #fff;
     height: 24px;
+    line-height: 24px;
 }
 
 .icon {
     svg {
         display: flex;
-        width: 20px;
-        height: 20px;
+        width: 24px;
+        height: 24px;
     }
 
-    transform: translateY(-2px);
     margin-right: 8px;
     filter: drop-shadow(2px 1px 2px rgb(0 0 0 / 0.4));
 }
