--- a/src/context/root.module.scss
+++ b/src/context/root.module.scss
@@ -2,6 +2,7 @@
     margin-top: var(--header-height);
     padding-left: var(--navigation-width);
     background-color: var(--root-layout);
+    transition: padding ease 300ms;
 }
 
 .wrapper {
