--- a/src/app/(auth)/login/login.module.scss
+++ b/src/app/(auth)/login/login.module.scss
@@ -1,16 +1,22 @@
 .layout {
+    position: relative;
     height: 100vh;
     display: flex;
     align-items: center;
+    z-index: 1;
 }
 
 .wrapper {
-    width: 460px;
+    width: 476px;
     max-width: 100%;
     margin: 0 auto;
     background-color: #fff;
-    padding: 12px 12px;
+    padding: 40px 40px;
     border-radius: var(--root-radius);
+
+    p {
+        margin-top: 12px;
+    }
 }
 
 .heading {
@@ -20,6 +26,6 @@
 
 .form {
     & > * + * {
-        margin-top: 8px;
+        margin-top: 12px;
     }
 }
