--- a/src/components/search/search.module.scss
+++ b/src/components/search/search.module.scss
@@ -34,6 +34,55 @@
     position: relative;
 }
 
+// Search input
+
+.search_box_input {
+    position: relative;
+    display: flex;
+    align-items: center;
+    border: 2px solid transparent;
+    border-radius: var(--root-radius);
+    height: 28px;
+    width: calc(100% - 86px);
+
+    span {
+        width: 20px;
+        height: 20px;
+        margin-left: 8px;
+        margin-right: 4px;
+    }
+
+    input {
+        background-color: transparent;
+        outline: none;
+        border: none;
+        width: 100%;
+        padding-right: 16px;
+        color: var(--foreground-rgb);
+    }
+
+    &:focus-within {
+        border-color: #0b62d5;
+    }
+}
+
+.clear {
+    cursor: pointer;
+
+    svg {
+        width: 20px;
+        height: 20px;
+    }
+}
+
+.loading {
+    svg {
+        width: 20px;
+        height: 20px;
+        animation: spin 0.6s linear infinite;
+    }
+}
+
 // #0b62d5
 
 .wrapper_action {
